# ragnite

./: .env.example  .gitignore  .uv.toml  IMPROVEMENTS.md  LICENSE  Makefile  NEXT_STEPS.md  NEXT_STEPS_2.md  PROGRESS.md  README.md  docker-compose.dev.yml  environment.yml  progress_summary.md  pyproject.toml  requirements.txt
advanced-rag/: cache_integration.py  chain_of_thought.py  requirements.txt
advanced-rag/caching/: HYBRID_SETUP.md  README.md  cache_dashboard.py  cache_manager.py  embedding_cache.py  prompt_cache.py  result_cache.py  semantic_cache.py
advanced-rag/hypothetical-doc/: README.md  __init__.py  evaluation.py  hyde_engine.py  templates.py
advanced-rag/hypothetical-doc/examples/: hyde_example.py
advanced-rag/hypothetical-doc/src/: hyde_rag_pipeline.py
advanced-rag/multi-hop/: __init__.py  multi_hop_rag.py  visualization.py
advanced-rag/multi-modal/: __init__.py  image_retriever.py  multimodal_rag.py
advanced-rag/multi-query/: README.md
advanced-rag/multi-query/src/: mq_rag_pipeline.py
advanced-rag/self-rag/: README.md  self_rag_engine.py
advanced-rag/self-rag/examples/: self_rag_example.py
advanced-rag/self-rag/src/: self_rag_pipeline.py
advanced-rag/streaming/: __init__.py  client.py  streaming_rag.py
basic-rag/: README.md  requirements.txt
basic-rag/data/raw/: rag_overview.txt
basic-rag/examples/: basic_rag_example.py
basic-rag/src/: ingest.py  rag_pipeline.py
docker/: .env  README.md  docker-compose.yml
docker/config/postgres/: init.sql
docker/scripts/: run_benchmarks.py  setup_test_data.py
domain-specific/: README.md
domain-specific/code-rag/: README.md  requirements.txt
domain-specific/code-rag/examples/: code_rag_example.py
domain-specific/code-rag/src/: code_chunker.py  code_indexer.py  code_rag_pipeline.py
domain-specific/examples/: multi_domain_rag.py
domain-specific/legal-rag/: README.md  SUMMARY.md  requirements.txt
domain-specific/legal-rag/examples/: legal_rag_example.py
domain-specific/legal-rag/src/: authority_verifier.py  citation_extractor.py  (+2 more)
domain-specific/medical-rag/: README.md  SUMMARY.md  requirements.txt
domain-specific/scientific-rag/: README.md  SUMMARY.md  requirements.txt
evaluation/: README.md  requirements.txt
evaluation/examples/: evaluate_rag.py  sample_benchmark.json
evaluation/src/: __init__.py  end_to_end_metrics.py  evaluator.py  generation_metrics.py  human_eval_tools.py  retrieval_metrics.py  visualization.py
examples/: cached_rag_example.py
research/: models.md  rag-systems.md
tools/: README.md  setup.py
tools/docs/: PROGRESS.md
tools/examples/: data_migration_example.py  data_processing_example.py  embedding_example.py  google_provider_example.py  index_optimizer_example.py  query_benchmarker_example.py  schema_manager_example.py  vector_db_example.py
tools/src/: __init__.py
tools/tests/: test_google_provider.py
utils/: __init__.py  env_loader.py  setup_env_check.py  setup_test_env.py
(+222 files in other folders)
